# hl7-rs

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  audit.toml  deny.toml
.github/workflows/: ci.yml
crates/fhir-r4/: Cargo.toml  README.md  TODO.md
crates/fhir-r4/src/: lib.rs  observation.rs  patient.rs  satusehat.rs  types.rs
crates/hl7-mindray/: Cargo.toml  README.md  TODO.md
crates/hl7-mindray/src/: lib.rs
crates/hl7-mllp/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
crates/hl7-mllp/benches/: framing.rs
crates/hl7-mllp/examples/: tcp_listener.rs  tokio_tcp.rs
crates/hl7-mllp/src/: lib.rs
crates/hl7-v2/: Cargo.toml  README.md  TODO.md
crates/hl7-v2/src/: lib.rs
crates/satusehat/: Cargo.toml  LICENSE  README.md  TODO.md
crates/satusehat/src/: codes.rs  lib.rs  observation.rs
