[workspace]
members = [
    "crates/hl7-mllp",
    "crates/hl7-v2",
    "crates/hl7-mindray",
    "crates/fhir-r4",
    "crates/satusehat",
]
resolver = "2"
edition = "2024"
rust-version = "1.94"

# Shared dependency versions across the workspace
[workspace.dependencies]
bytes      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
# Minimum version floor: RUSTSEC-2026-0098 / RUSTSEC-2026-0099 fixed in 0.103.12
rustls-webpki = "0.103.12"

# Intra-workspace path references (used during local dev)
hl7-mllp   = { path = "crates/hl7-mllp",   version = "0.0.1" }
hl7-v2     = { path = "crates/hl7-v2",     version = "0.0.1" }
hl7-mindray = { path = "crates/hl7-mindray", version = "0.0.1" }
fhir-r4    = { path = "crates/fhir-r4",    version = "0.0.1" }
satusehat  = { path = "crates/satusehat",  version = "0.0.1" }
