[package]
name = "fhir-r4"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "FHIR R4 resource types and builders — focused, composable, serde-compatible"
readme = "README.md"
repository = "https://github.com/Zluidr/hl7-rs"
license = "Apache-2.0"
keywords = ["fhir", "hl7", "healthcare", "medical", "interoperability"]
categories = ["encoding", "science"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[features]
default    = []
satusehat  = []
