[package]
name = "hl7-mindray"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "Mindray patient monitor HL7 field mappings — 99MNDRY private code space and vital sign extraction"
readme = "README.md"
repository = "https://github.com/Zluidr/hl7-rs"
license = "Apache-2.0"
keywords = ["hl7", "mindray", "healthcare", "patient-monitor", "vitals"]
categories = ["science", "encoding"]

[dependencies]
hl7-v2 = { workspace = true }
