[package]
name = "hl7-mllp"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Transport-agnostic MLLP (Minimal Lower Layer Protocol) framing for HL7 v2 messages"
readme = "README.md"
repository = "https://github.com/Zluidr/hl7-rs"
license = "Apache-2.0"
keywords = ["hl7", "mllp", "healthcare", "medical", "interoperability"]
categories = ["encoding", "network-programming", "science"]

[dependencies]
bytes = { workspace = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std"] }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util"] }

[features]
default = []
noncompliance = []
timestamps = ["dep:chrono"]
async = ["dep:tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
hl7-v2 = { path = "../hl7-v2" }
